{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 1083,
  "lineage": "74fd8504-29ca-6d24-2c7a-d20545474243",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0cb0c20a9d8d58f72",
            "owner_id": "503489311732",
            "tags": {
              "Name": "terraform-gateway"
            },
            "vpc_id": "vpc-01ed20eb0b37fb7df"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:503489311732:loadbalancer/app/alb-example/c8d2d5e6732b5929",
            "arn_suffix": "app/alb-example/c8d2d5e6732b5929",
            "dns_name": "alb-example-341686068.us-east-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:503489311732:loadbalancer/app/alb-example/c8d2d5e6732b5929",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-example",
            "security_groups": [
              "sg-0ead9fb17faf66010"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-023e7717b31948375"
              },
              {
                "subnet_id": "subnet-029aab561abd3d989"
              }
            ],
            "subnets": [
              "subnet-023e7717b31948375",
              "subnet-029aab561abd3d989"
            ],
            "tags": {
              "Name": "terraform-alb"
            },
            "vpc_id": "vpc-01ed20eb0b37fb7df",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.terraform",
            "aws_subnet.public",
            "aws_subnet.public2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:503489311732:listener/app/alb-example/c8d2d5e6732b5929/2137e93f3be49af0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:503489311732:targetgroup/target/d86daf63aa75b389",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:503489311732:listener/app/alb-example/c8d2d5e6732b5929/2137e93f3be49af0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:503489311732:loadbalancer/app/alb-example/c8d2d5e6732b5929",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.target",
            "aws_security_group.terraform",
            "aws_subnet.public",
            "aws_subnet.public2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:503489311732:targetgroup/target/d86daf63aa75b389",
            "arn_suffix": "targetgroup/target/d86daf63aa75b389",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:503489311732:targetgroup/target/d86daf63aa75b389",
            "lambda_multi_value_headers_enabled": false,
            "name": "target",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lb-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-01ed20eb0b37fb7df"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0038553ee9346b42f",
            "original_route_table_id": "rtb-060b1067a20d80f18",
            "route_table_id": "rtb-07a2fd13dacf347f3",
            "vpc_id": "vpc-01ed20eb0b37fb7df"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.terraform-route",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07a2fd13dacf347f3",
            "owner_id": "503489311732",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb0c20a9d8d58f72",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-route-table"
            },
            "vpc_id": "vpc-01ed20eb0b37fb7df"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:503489311732:security-group/sg-0ead9fb17faf66010",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ead9fb17faf66010",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow HTTP port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "172.2.0.0/16"
                ],
                "description": "allow TLS port 443 ",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform_sg",
            "name_prefix": null,
            "owner_id": "503489311732",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ed20eb0b37fb7df"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:503489311732:subnet/subnet-023e7717b31948375",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.2.32.0/24",
            "id": "subnet-023e7717b31948375",
            "map_public_ip_on_launch": true,
            "owner_id": "503489311732",
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-01ed20eb0b37fb7df"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:503489311732:subnet/subnet-029aab561abd3d989",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.2.8.0/24",
            "id": "subnet-029aab561abd3d989",
            "map_public_ip_on_launch": true,
            "owner_id": "503489311732",
            "tags": {
              "Name": "public2"
            },
            "vpc_id": "vpc-01ed20eb0b37fb7df"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:503489311732:vpc/vpc-01ed20eb0b37fb7df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.2.0.0/16",
            "default_network_acl_id": "acl-0d50deb754a955597",
            "default_route_table_id": "rtb-060b1067a20d80f18",
            "default_security_group_id": "sg-0aff6bebcaf6e5a04",
            "dhcp_options_id": "dopt-4b61c720",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01ed20eb0b37fb7df",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-060b1067a20d80f18",
            "owner_id": "503489311732",
            "tags": {
              "Name": "terraform"
            }
          }
        }
      ]
    }
  ]
}